# linear-haskell

./: .gitignore  .test.py.swp  CHANGELOG.md  Linear.hs  Main.hs  README.md  \  linear-haskell.cabal  stack.yaml  test.py
app/: .Tensor_Test.hs.swp  Main.hs  Tensor_Test.hs
src/: .Tensor.hs.swp  Linear.hs  Matrix.hs  MyRandom.hs  Tensor.hs  Useful.hs  Vector.hs
src/.liquid/: Linear.hs.cst.html  Linear.hs.html  Linear.hs.json  Linear.hs.smt2  Linear.hs.vim.annot
