cabal-version:      2.4
version: 0.1
name:               linear-haskell
library
    exposed-modules:  Linear
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable linear-haskell
    main-is:          Main.hs
    build-depends:
        base,
        linear-haskell

    hs-source-dirs:   app
    default-language: Haskell2010
