cabal-version:      2.4
version: 0.1
name:               linear-haskell
library
    exposed-modules:  Vector, Matrix, Tensor, MyRandom
    other-modules: Useful
    build-depends:    base, random
    hs-source-dirs:   src
    default-language: Haskell2010

executable linear-haskell
    main-is:          Main.hs
    build-depends:
        base,
        linear-haskell,

    hs-source-dirs:   app
    default-language: Haskell2010

executable tensor_test 
    main-is:          Tensor_Test.hs
    build-depends:
        base,
        linear-haskell,

    hs-source-dirs:   app
    default-language: Haskell2010
